--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -1,60 +1,132 @@
 <!DOCTYPE html>
 <html lang="en">
-
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>DEEP FROST</title>
 
     <!-- CSS only -->
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css"
-        integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
+    <link
+      rel="stylesheet"
+      href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css"
+      integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z"
+      crossorigin="anonymous"
+    />
+    <link rel="stylesheet" href="style.css" />
 
     <!-- JS, Popper.js, and jQuery -->
-    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
-        integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
-        crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"
-        integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN"
-        crossorigin="anonymous"></script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"
-        integrity="sha384-B4gt1jrGC7Jh4AgTPSdUtOBvfO8shuf57BaghqFfPlYxofvL8/KUEfYiJOMMV+rV"
-        crossorigin="anonymous"></script>
-</head>
+    <script
+      src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
+      integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
+      crossorigin="anonymous"
+    ></script>
+    <script
+      src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"
+      integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN"
+      crossorigin="anonymous"
+    ></script>
+    <script
+      src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"
+      integrity="sha384-B4gt1jrGC7Jh4AgTPSdUtOBvfO8shuf57BaghqFfPlYxofvL8/KUEfYiJOMMV+rV"
+      crossorigin="anonymous"
+    ></script>
+    <script src="https://kit.fontawesome.com/a076d05399.js"></script>
+  </head>
 
-<body>
+  <body>
+    <div class="header">
+      <nav id="navbar">
+        <ul>
+          <li><a href="#"> HackerSpace </a></li>
+        </ul>
+        <ul>
+          <li>
+            <a href="https://github.com/HackerSpace-PESU">Github</a>
+          </li>
+          <li>
+            <a href="#">About</a>
+          </li>
+          <li>
+            <a href="#">Projects</a>
+          </li>
+          <li>
+            <a href="#">Blog</a>
+          </li>
+          <li>
+            <a href="#">Discord</a>
+          </li>
+        </ul>
+      </nav>
+    </div>
+    <br />
     <div class="container">
-        <div class="row">
-            <h1 class="mx-auto pt-2">DEEP FROST</h1>
-        </div>
-        <hr>
-        <div class="row pt-2">
+      <div class="row">
+        <h1 class="mx-auto pt-2">DEEP FROST</h1>
+      </div>
+      <hr />
+      <div class="row pt-2">
         <div class="col-12 col-md-4 border">
-            <form action="/" method="POST" class="p-3">{{ form.hidden_tag() }}
-                {% for field in form if field.widget.input_type != 'hidden' %}
-                <div class="form-group">
-                    <strong>{{ field.label(class='control-label') }}</strong>
-                    {{ field(class='form-control') }}
-                    {% if field.errors %}
-                    <div class="alert alert-danger" role="alert">
-                        {{ field.errors[0] }}
-                    </div>
-                    {% endif %}
-                </div>
-                {% endfor %}
-                <br />
-                <button type="submit" class="btn btn-primary ml-auto">Generate</button>
-            </form>
+          <form action="/" method="POST" class="p-3">
+            {{ form.hidden_tag() }} {% for field in form if
+            field.widget.input_type != 'hidden' %}
+            <div class="form-group">
+              <strong>{{ field.label(class='control-label') }}</strong>
+              {{ field(class='form-control') }} {% if field.errors %}
+              <div class="alert alert-danger" role="alert">
+                {{ field.errors[0] }}
+              </div>
+              {% endif %}
+            </div>
+            {% endfor %}
+            <br />
+            <button type="submit" class="btn btn-primary ml-auto">
+              Generate
+            </button>
+          </form>
         </div>
         <div class="col-12 col-md-8 ml-auto">
-            {% if poem %}
-            {% for line in poem %}
-            <p>{{line|capitalize}}</p>
-            {% endfor %}
-            {% endif %}
+          {% if poem %} {% for line in poem %}
+          <p>{{line|capitalize}}</p>
+          {% endfor %} {% endif %}
         </div>
-    </div>  
+      </div>
     </div>
-</body>
 
+    <footer class="footer">
+      <p class="content">&#60;/HackerSpace&#62;</p>
+      <div class="footerSpace"></div>
+      <div id="github">
+        <a
+          class="footerIcon"
+          href="https://github.com/HackerSpace-PESU"
+          target="_blank"
+          ><i id="github" class="fab fa-github"></i
+        ></a>
+      </div>
+      <div id="instagram">
+        <a
+          class="footerIcon"
+          href="https://www.instagram.com/peshackerspace/"
+          target="_blank"
+          ><i id="instagram" class="fab fa-instagram"></i
+        ></a>
+      </div>
+      <div id="mail">
+        <a
+          class="footerIcon"
+          href="mailto:hackathonclubpes@gmail.com"
+          target="_blank"
+          ><i id="mail" class="fas fa-at"></i
+        ></a>
+      </div>
+      <div id="discord">
+        <a
+          class="footerIcon"
+          href="https://discord.com/invite/zEpxPnP"
+          target="_blank"
+          ><i id="discord" class="fab fa-discord"></i
+        ></a>
+      </div>
+    </footer>
+  </body>
 </html>
