--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -12,7 +12,7 @@
       integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z"
       crossorigin="anonymous"
     />
-    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="app/templates/style.css" />
 
     <!-- JS, Popper.js, and jQuery -->
     <script
