--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -12,6 +12,7 @@
       integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z"
       crossorigin="anonymous"
     />
+    <link href='https://fonts.googleapis.com/css?family=JetBrains Mono' rel='stylesheet'>
     <link rel="stylesheet" href="{{ url_for('static', filename='style.css') }}" />
 
     <!-- JS, Popper.js, and jQuery -->
