Header and footer

--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -94,7 +94,7 @@
     </div>
 
     <footer class="footer">
-      <p class="content">&#60;/HackerSpace&#62;</p>
+      <p class="content" style = "font-family:JetBrains Mono">&#60;/HackerSpace&#62;</p>
       <div class="footerSpace"></div>
       <div id="github">
         <a
