Changes in Header and fixed footer

--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -41,19 +41,10 @@
         </ul>
         <ul>
           <li>
-            <a href="https://github.com/HackerSpace-PESU">Github</a>
+            <a href="https://github.com/HackerSpace-PESU/deep-frost">Github</a>
           </li>
           <li>
-            <a href="#">About</a>
-          </li>
-          <li>
-            <a href="#">Projects</a>
-          </li>
-          <li>
-            <a href="#">Blog</a>
-          </li>
-          <li>
-            <a href="#">Discord</a>
+            <a href="https://discord.com/channels/756931720212774969/756937635275997185">Discord</a>
           </li>
         </ul>
       </nav>
@@ -98,7 +89,7 @@
       <div id="github">
         <a
           class="footerIcon"
-          href="https://github.com/HackerSpace-PESU"
+          href="https://github.com/HackerSpace-PESU/deep-frost"
           target="_blank"
           ><i id="github" class="fab fa-github"></i
         ></a>
