Changed Header and Footer in app folder

--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -12,8 +12,14 @@
       integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z"
       crossorigin="anonymous"
     />
-    <link href='https://fonts.googleapis.com/css?family=JetBrains Mono' rel='stylesheet'>
-    <link rel="stylesheet" href="{{ url_for('static', filename='style.css') }}" />
+    <link
+      href="https://fonts.googleapis.com/css?family=JetBrains Mono"
+      rel="stylesheet"
+    />
+    <link
+      rel="stylesheet"
+      href="{{ url_for('static', filename='style.css') }}"
+    />
 
     <!-- JS, Popper.js, and jQuery -->
     <script
@@ -42,19 +48,13 @@
         </ul>
         <ul>
           <li>
-            <a href="https://github.com/HackerSpace-PESU">Github</a>
+            <a href="https://github.com/HackerSpace-PESU/deep-frost">Github</a>
           </li>
           <li>
-            <a href="#">About</a>
-          </li>
-          <li>
-            <a href="#">Projects</a>
-          </li>
-          <li>
-            <a href="#">Blog</a>
-          </li>
-          <li>
-            <a href="#">Discord</a>
+            <a
+              href="https://discord.com/channels/756931720212774969/756937635275997185"
+              >Discord</a
+            >
           </li>
         </ul>
       </nav>
@@ -94,12 +94,14 @@
     </div>
 
     <footer class="footer">
-      <p class="content" style = "font-family:JetBrains Mono">&#60;/HackerSpace&#62;</p>
+      <p class="content" style="font-family: JetBrains Mono">
+        &#60;/HackerSpace&#62;
+      </p>
       <div class="footerSpace"></div>
       <div id="github">
         <a
           class="footerIcon"
-          href="https://github.com/HackerSpace-PESU"
+          href="https://github.com/HackerSpace-PESU/deep-frost"
           target="_blank"
           ><i id="github" class="fab fa-github"></i
         ></a>
@@ -113,10 +115,7 @@
         ></a>
       </div>
       <div id="mail">
-        <a
-          class="footerIcon"
-          href="mailto:hackathonclubpes@gmail.com"
-          target="_blank"
+        <a class="footerIcon" href="mailto:hackerspace@pes.edu" target="_blank"
           ><i id="mail" class="fas fa-at"></i
         ></a>
       </div>
